# panel

./: .appveyor.yml  .buildinfo  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .travis.yml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  Comparisons.html  FAQ.html  LICENSE.txt  MANIFEST.in  PyodideServiceWorker.js  README.md  Roadmap.html  Untitled.ipynb  _rediraffe_redirected.json  about.html  app.py  codecov.yml  community.html  dodo.py  environment.yml  genindex.html  hatch.toml  hatch_build.py  index.html  objects.inv  package-lock.json  param_stubgen.py  pixi.toml  playground_analysis.md  playground_issues.md  postBuild  py-modindex.html  pyodide_dependencies.json  (+11 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  openssl.cnf
.github/: FUNDING.yml  pull_request_template.md
_images/: inheritance-020abf19370bb14e5521f7bfb3b3dfa385be9475.png.map  inheritance-09097cf8f8e6563aa2feaeb04d3726dab9339d40.png.map  inheritance-09b9370b4746931138859ce44e5bd5e25f74e8cd.png.map  inheritance-10e53831871e2a19627275ef7d4463cea62d8172.png.map  inheritance-15027da78f7559e90352451a96e8c496367f86ee.png.map  inheritance-153be657b68a9b5419d6c8c03ffac480eaca8018.png.map  inheritance-15edc89e953e604692da601e171e3136aba0ee6f.png.map  inheritance-17cd5c4bc907e43549beb2d35f9b05a837316781.png.map  inheritance-1c22cdb171ec4c2d791e47037c12a3f593957ec3.png.map  inheritance-1c858313f8540d598082ee1600bfcfc812b66e28.png.map  inheritance-1dbe2a32ce54960b2132a8e7e8ee8a37724a9e50.png.map  inheritance-1fb1767c0a1e90b494d71905101c496e8e332af6.png.map  inheritance-20d971a0ca9507812fa15c08be7207ae85ed0766.png.map  inheritance-224b4e146995c589fced3aed00860c11b7471ccf.png.map  inheritance-2347a5ff858f45259b4852c816475685f4cfef7a.png.map  inheritance-23f332a0bdf3101e507489f3546ecc379e92c73f.png.map  inheritance-251d51c33a22eaa900fbab6fa0c1a49f80f54965.png.map  inheritance-2558db777ee2da03d9725c4a8c6aa60a7aed78e6.png.map  inheritance-257f72ddece363dad44a709c5db70a7d3bfd6d8a.png.map  inheritance-260fb109591e2251edc7a794230e6a511caf1bc4.png.map  inheritance-266104858f68f794f305581afbceb827c7483a5e.png.map  inheritance-275c3ab7117079ba452937d35e13edb4f29ae8f9.png.map  inheritance-27d503ae348df5cddaa02523197dab42eadec315.png.map  inheritance-288431b8076c8f96ca45afc93d0ffab282cf2dfe.png.map  inheritance-2987a2eea57908e5ae18283e5a1239d5a3cbdb0f.png.map  inheritance-2a2e3f440fdedc2184246b82c50b525ebf8b5b4e.png.map  inheritance-2b0c1ff57de76184ae3f41dbd1e44ff35f3472fd.png.map  inheritance-2bb4b1fb02e78fc14062b066e1cf8eff2b8820e2.png.map  inheritance-30af35e57f9e2a8f3821a35c2464bbc49f8eced7.png.map  inheritance-32ec93b391bfeef05282c9cfe51f3ba51a827e12.png.map  inheritance-342c36216d7d5332468809202818b56cdc28f146.png.map  inheritance-3564dc919bb4a09bf128dc7ef17e8bc3cc54e3bf.png.map  inheritance-35c4a9aead346301e1f999e1233bfc293e608a4b.png.map  inheritance-36670bf7d83ed15a5c554a7212cfc2b2240c94b3.png.map  inheritance-3790fa4ef2f177cb8b62a9742cbde3871bd64976.png.map  inheritance-3aa73419226fcb502e89ac9cdd04bfdf68b31f6a.png.map  inheritance-3ac70631bf2c28a21b292f1e177f4e411811c6d1.png.map  inheritance-3ba21bd63a5a744fec5ab3a8e1f1daf292141b01.png.map  inheritance-3bc8b4fc2b3873897fba9796fbd8555ef1806286.png.map  inheritance-3ccce5563c4522fccbec96827e1bbc11bfbc815b.png.map  (+91 more)
_static/: PyodideWebWorker.js  ServiceHandler.js  WorkerHandler.js  alert.css  dataframe.css  documentation_options.js  gallery.css  hv-sidebar-dropdown.css  mystnb.css  nbsite.css  nbsite.js  notebook.css  pygments.css  run_cell.js  runbutton.css  scroller.css  webpack-macros.html
about/: index.html  people.html  releases.html  roadmap.html
analysis/: README.md  app_as_is.py  app_external_server.py  app_internal_server.py  perspective_anywidget.js
anywidget_component_examples/: basic_counter.py  chartjs.py  child_with_type.py  confetti_direct.py  confetti_importmap.py  cytoscape.py  external_files.py  grid_layout.py  image_button.py  multiple_children.py  react_counter.py  single_child.py  split_layout.py  styled_counter.py
api/: bokeh-content-75fb416d348c443ebc0a99a25b1caf34-api-panel.models.js  bokeh-content-8e63d44ae19d4035ada75badbc68cf21-api-panel.models.js  bokeh-content-a83a29dd3f5f4afab916eed34c620928-api-panel.models.js  bokeh-content-d1bd556cf22645aca5e4323f2ab3409c-api-panel.models.js  cheatsheet.html  config.html  index.html  modules.html  panel.__init__.html  panel.__main__.html  panel.__version.html  panel._param.html  panel._version.html  panel.auth.html  panel.chat.feed.html  panel.chat.html  panel.chat.icon.html  panel.chat.input.html  panel.chat.interface.html  panel.chat.langchain.html  panel.chat.message.html  panel.chat.step.html  panel.chat.utils.html  panel.command.bundle.html  panel.command.compile.html  panel.command.convert.html  panel.command.html  panel.command.oauth_secret.html  panel.command.serve.html  panel.compiler.html  panel.config.html  panel.custom.html  panel.depends.html  panel.entry_points.html  panel.html  panel.interact.html  panel.io.admin.html  panel.io.application.html  panel.io.browser.html  panel.io.cache.html  (+313 more)
assets/: occupancy.csv
binder/: apt.txt  postBuild  requirements.txt  start
conda.recipe/: meta.yaml
developer_guide/: custom_models.html  extensions.html  index.html  testing.html  wasm.html
doc/: Comparison.rst  Comparisons.rst  FAQ.rst  Roadmap.rst  about.rst  community.md  conf.py  generate_modules.py  index.md  index.rst  myst.yml  pyodide_dependencies.json  releases.md  releases.rst  upgrade.md
examples/: best_practices.ipynb  conftest.py  environment.yml  example_echarts_events.py  homepage.ipynb  site.yaml  temporary_test_example.ipynb
explanation/: apis.html  comparisons.html  components.html  dependencies.html  develop_seamlessly.html  index.html  linking.html
gallery/: altair_brushing.html  deckgl_game_of_life.html  gapminders.html  glaciers.html  hvplot_explorer.html  index.html  iris_kmeans.html  nyc_deckgl.html  penguin_crossfilter.html  penguin_kmeans.html  portfolio_analyzer.html  portfolio_optimizer.html  webllm.html  (+5 more)
(+4692 files in other folders)
