[build-system]
requires = [
    "param >=2.0.0",
    "pyct >=0.4.4",
    "setuptools >=42",
    "bokeh >=3.4.0,<3.5.0",
    "pyviz_comms >=0.7.4",
    "requests",
    "packaging",
    "tqdm >=4.48.0",
    "markdown",
    "wheel"
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".tox",
    ".eggs",
    "*.egg",
    "doc",
    "dist",
    "build",
    "_build",
    "examples",
    ".ipynb_checkpoints",
    "node_modules",
    "apps",
]
line-length = 165
fix = true

[tool.ruff.lint]
ignore = [
    "E402",
    "E712",
    "E731",
    "E741",
    "W605",
    "E701", # Multiple statements on one line
    "B006", # Do not use mutable data structures for argument defaults
]
select = [
    "B",
    "E",
    "F",
    "W",
    "PIE",
    "T20",
    "RUF006",
]

[tool.ruff.lint.per-file-ignores]
"panel/tests/ui/jupyter_server_test_config.py" = ["F821"]
"panel/compiler.py" = ["T201"]
"panel/io/convert.py" = ["T201"]
"panel/pane/vtk/synchronizable_*.py" = ["T201"]

[tool.codespell]
ignore-words-list = "nd,doubleclick,ser"
skip = "doc/generate_modules.py,examples/reference/templates/FastGridTemplate.ipynb,panel/.eslintrc.js,panel/package-lock.json,panel/package.json"
write-changes = true

[tool.pytest.ini_options]
addopts = "-v --pyargs --doctest-ignore-import-errors --color=yes"
norecursedirs = "doc .git dist build _build .ipynb_checkpoints panel/examples"
asyncio_mode = "auto"
xfail_strict = true
filterwarnings = [
    # 2023-11: ChatBox and ChatRow are deprecated
    "ignore:'pn.widgets.ChatBox' is deprecated and will be removed in version 1.4",
    "ignore:'pn.widgets.ChatRow' is deprecated and will be removed in version 1.4",
    # 2023-11: `pkg_resources` is deprecated
    "ignore:Deprecated call to `pkg_resources.+?'zope:DeprecationWarning",  # https://github.com/zopefoundation/meta/issues/194
    "ignore: pkg_resources is deprecated as an API:DeprecationWarning:streamz.plugins", # https://github.com/python-streamz/streamz/issues/460
]
