[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
    "param >=2.0.0",
    "bokeh >=3.4.0,<3.5.0",
    "pyviz_comms >=0.7.4",
    "requests",
    "packaging",
    "tqdm >=4.48.0",
    "markdown",
]
build-backend = "hatchling.build"

[project]
name = "panel"
dynamic = ["version"]
description = 'The powerful data exploration & web app framework for Python.'
readme = "README.md"
license = { text = "BSD" }
requires-python = ">=3.9"
authors = [{ name = "HoloViz developers", email = "developers@holoviz.org" }]
maintainers = [
    { name = "HoloViz developers", email = "developers@holoviz.org" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    'bokeh >=3.4.0,<3.5.0',
    'param >=2.0.0,<3.0',
    'pyviz_comms >=2.0.0',
    'xyzservices >=2021.09.1', # Bokeh dependency, but pyodide 23.0.0 does not always pick it up
    'markdown',
    'markdown-it-py',
    'linkify-it-py',
    'mdit-py-plugins',
    'requests',
    'tqdm >=4.48.0',
    'bleach',
    'typing_extensions',
    'pandas >=1.2',
]

[project.urls]
Homepage = "https://panel.holoviz.org"
Source = "http://github.com/holoviz/panel"
HoloViz = "https://holoviz.org/"

[project.optional-dependencies]
recommended = [
    'jupyterlab',
    'holoviews >=1.16.0',
    'matplotlib',
    'pillow',
    'plotly',
]
[project.scripts]
panel = "panel.util.command:main"

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".tox",
    ".eggs",
    "*.egg",
    "doc",
    "dist",
    "build",
    "_build",
    "examples",
    ".ipynb_checkpoints",
    "node_modules",
    "apps",
]
line-length = 165
fix = true

[tool.ruff.lint]
ignore = [
    "E402", # Module level import not at top of file
    "E712", # Avoid equality comparisons to True; use if {cond}: for truth checks
    "E731", # Do not assign a lambda expression, use a def
    "E741", # Ambiguous variable name
    "W605", # Invalid escape sequence
    "E701", # Multiple statements on one line
    "B006", # Do not use mutable data structures for argument defaults
]
select = [
    "B",
    "E",
    "F",
    "W",
    "PIE",
    "T20",
    "RUF006",
]

[tool.ruff.lint.per-file-ignores]
"panel/tests/ui/jupyter_server_test_config.py" = ["F821"]
"panel/compiler.py" = ["T201"]
"panel/io/convert.py" = ["T201"]
"panel/pane/vtk/synchronizable_*.py" = ["T201"]

[tool.codespell]
ignore-words-list = "nd,doubleclick,ser"
skip = "doc/generate_modules.py,examples/reference/templates/FastGridTemplate.ipynb,panel/.eslintrc.js,panel/package-lock.json,panel/package.json"
write-changes = true

[tool.pytest.ini_options]
addopts = "-v --pyargs --doctest-ignore-import-errors --color=yes"
norecursedirs = "doc .git dist build _build .ipynb_checkpoints panel/examples"
asyncio_mode = "auto"
xfail_strict = true
filterwarnings = [
    # 2023-11: `pkg_resources` is deprecated
    "ignore:Deprecated call to `pkg_resources.+?'zope:DeprecationWarning",  # https://github.com/zopefoundation/meta/issues/194
    "ignore: pkg_resources is deprecated as an API:DeprecationWarning:streamz.plugins", # https://github.com/python-streamz/streamz/issues/460
]
