[metadata]
license_file = LICENSE.txt

[mypy]
python_version = 3.6

show_error_context = True
show_column_numbers = True
show_error_codes = True
color_output = True
error_summary = True

disallow_untyped_defs = False
ignore_missing_imports = True

[mypy-panel.tests.*]
ignore_errors = True

[mypy-panel.tests.test___all__]
ignore_errors = False
