[metadata]
license_file = LICENSE.txt

[flake8]
# F - all pyflake errors
# E101 - indentation contains mixed spaces and tabs
# E111 - indentation is not a multiple of four
# E501 - line too long (see max-line-length)
# E722 - do not use bare except, specify exception instead
include = *.py
exclude = .git,__pycache__,.tox,.eggs,*.egg,doc,dist,build,_build,.ipynb_checkpoints,node_modules,apps
ignore = E,W,F812
select = F,E101,E111,E501,E722
max-line-length = 165
